# Telegram-Bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  telegram-bot服务器配置.xlsx  ~$telegram-bot服务器配置.xlsx
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: .gitkeep  20260427_0001_create_analytics_events.py  20260505_0002_create_analytics_annotations.py
bot/: __init__.py  __main__.py  ae_cookie_dashboard.py  analytics_dashboard.py  app.py  config.py  logging_config.py  repair_monitor.py  seeds.py  sync.py
bot/handlers/: __init__.py  aftersale.py  club.py  device.py  hidden_entries.py  inventory.py  logistics.py  menu.py  order.py  presale.py  service_center.py  settings.py  start.py  support.py  vip.py
bot/keyboards/: __init__.py  callbacks.py  inline.py
bot/middlewares/: __init__.py  analytics.py  db.py  i18n.py  throttle.py  user.py
bot/models/: __init__.py  ae_store_cookie.py  analytics.py  analytics_annotation.py  device.py  faq.py  order.py  product.py  ticket.py  user.py
bot/services/: __init__.py  ai_reply.py  aliexpress_mtop.py  analytics.py  catalog.py  discount_sheet.py  faq_service.py  hidden_access.py  inventory_sync.py  inventory_tiers.py  jushuitan.py  kuayunbao.py  logistics_tracker.py  notification.py  outdoor_prices.py  outdoor_sheets.py  outdoor_sku_aliases.py  rhp.py  (+6 more)
docker/: entrypoint.sh
docs/: api-design.md  database-design.md  project-plan.md  technical-design.md
tests/: conftest.py  test_callbacks.py  test_config.py  test_sheets_parsing.py  test_sku_mapping.py
设计稿/: telegram机器人设计初稿.posf
(+15 files in other folders)
